updated for tablet and mobile. issue comes up where next and prev buttons disappear on mobile NEED TO FIX

--- a/styles.css
+++ b/styles.css
@@ -2155,7 +2155,14 @@ h1 {
 
   .mySlides {
     display: none;
+    text-align: center;
   }
+
+  .mySlides img {
+    display: block;
+    margin: 0 auto;
+  }
+
 
   .prev,
   .next {
@@ -3595,9 +3602,14 @@ h1 {
   /* Hide the images by default */
   .mySlides {
     display: none;
-    position: absolute;
-    width: 100%;
+    text-align: center;
   }
+
+  .mySlides img {
+    display: block;
+    margin: 0 auto;
+  }
+
 
   /* Next & previous buttons */
   .prev,
@@ -4068,7 +4080,14 @@ h1 {
   /* Hide the images by default */
   .mySlides {
     display: none;
+    text-align: center;
   }
+
+  .mySlides img {
+    display: block;
+    margin: 0 auto;
+  }
+
 
   /* Next & previous buttons */
   .prev,
